# dotnetdll

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: tests.yml
benches/: parse.rs  stage_timing.rs
dotnetdll-macros/: Cargo.toml  README.md
dotnetdll-macros/src/: binary_il.rs  coded.rs  constructors.rs  from.rs  lib.rs  resolved_il.rs  types.rs
examples/dump-dll/: Cargo.toml
examples/dump-dll/src/: main.rs
examples/smolasm/: Cargo.toml  README.md
examples/smolasm/inputs/: oop.il  test.il
examples/smolasm/src/: ast.rs  main.rs
examples/smolasm/src/parse/: combinators.rs  mod.rs
smolasm/: Cargo.toml
smolasm/inputs/: oop.il  test.il
smolasm/src/: assembly.pest  ast.rs  main.rs  test.il
smolasm/src/parse/: assembly.pest  ast.rs  combinators.rs  mod.rs
src/: context.rs  convert.rs  dll.rs  lib.rs  resolution.rs
src/binary/: cli.rs  context.rs  heap.rs  il.rs  method.rs  mod.rs  stream.rs
src/binary/il/: instruction.rs
src/binary/metadata/: header.rs  index.rs  mod.rs  table.rs
src/binary/signature/: attribute.rs  compressed.rs  encoded.rs  kinds.rs  mod.rs
src/convert/: mod.rs  read.rs  write.rs
src/read/: cli.rs  dll.rs  heap.rs  method.rs  mod.rs  stream.rs
src/read/metadata/: header.rs  index.rs  mod.rs  table.rs
src/read/signature/: compressed.rs  encoded.rs  kinds.rs  mod.rs
src/resolution/: lazy.rs  mod.rs  read.rs  utils.rs  write.rs
src/resolved/: assembly.rs  attribute.rs  body.rs  generic.rs  il.rs  members.rs  mod.rs  module.rs  resource.rs  signature.rs  types.rs
src/tests/: test.runtimeconfig.json  write.rs
tests/: attributes.rs  events.rs  exceptions.rs  fields.rs  fields_props.rs  generics.rs  hello_world.rs  oop.rs  parallel_output_equality.rs  pinvoke.rs  resources.rs  strings.resources  system_private_corelib.rs
tests/common/: .gitignore  env.rs  mod.rs  template.runtimeconfig.json  test.runtimeconfig.json
tests/resources-read/: resources-read.csproj
