[package]
name = "dotnetdll"
version = "0.0.4"
authors = ["Nick Clifford <nick@nickclifford.me>"]
edition = "2021"
license = "GPL-3.0+"
repository = "https://github.com/nickbclifford/dotnetdll"
keywords = ["c-sharp", "dotnet", "dll", "compiler", "parser"]
description = "A framework for reading and writing .NET metadata files, such as C# library DLLs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "dotnetdll-macros",
    "examples/smolasm"
]

[dependencies]
bitfield = "0.14"
bitvec = "1"
dotnetdll-macros = { path = "dotnetdll-macros", version = "0.0.1" }
num-traits = "0.2"
num-derive = "0.4"
object = { version = "0.32", features = ['write'] }
paste = "1"
scroll = { version = "0.11", features = ['derive'] }
scroll-buffer = "0.3"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
once_cell = "1"
regex = "1"
tempfile = "3"
