[package]
name = "dotnetdll"
version = "0.0.6"
authors = ["Nick Clifford <nick@nickclifford.me>"]
edition = "2024"
rust-version = "1.85.1"
license = "GPL-3.0+"
repository = "https://github.com/nickbclifford/dotnetdll"
keywords = ["c-sharp", "dotnet", "dll", "compiler", "parser"]
description = "A framework for reading and writing .NET metadata files, such as C# library DLLs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "dotnetdll-macros",
    "examples/smolasm",
    "examples/dump-dll"
]

[dependencies]
bitfield = "0.19"
bitvec = "1"
dotnetdll-macros = { path = "dotnetdll-macros", version = "0.0.1" }
num-traits = "0.2"
num-derive = "0.4"
object = { version = "0.36", features = ['write'] }
paste = "1"
scroll = { version = "0.11", features = ['derive'] }
scroll-buffer = "0.3"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
once_cell = "1"
regex = "1"
tempfile = "3"
