[package]
name = "dotnetdll"
version = "0.1.0"
authors = ["Nick Clifford <nick@nickclifford.me>"]
edition = "2024"
rust-version = "1.85.1"
license = "GPL-3.0+"
repository = "https://github.com/nickbclifford/dotnetdll"
readme = "README.md"
keywords = ["c-sharp", "dotnet", "dll", "compiler", "parser"]
categories = ["parser-implementations", "development-tools::ffi"]
description = "A framework for reading and writing .NET metadata files, such as C# library DLLs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "dotnetdll-macros",
    "examples/smolasm",
    "examples/dump-dll"
]

[dependencies]
bitfield = "0.19"
bitvec = "1"
dotnetdll-macros = { path = "dotnetdll-macros", version = "0.1.0" }
num-traits = "0.2"
num-derive = "0.4"
object = { version = "0.38", features = ['write'] }
paste = "1"
scroll = { version = "0.13", features = ['derive'] }
scroll-buffer = "0.3.2"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
once_cell = "1"
regex = "1"
tempfile = "3"
