[package]
name = "dotnetdll-macros"
version = "0.0.1"
authors = ["Nick Clifford <nick@nickclifford.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
heck = "0.4.0"
