[package]
name = "dotnetdll-macros"
version = "0.0.1"
authors = ["Nick Clifford <nick@nickclifford.me>"]
edition = "2021"
repository = "https://github.com/nickbclifford/dotnetdll"
license = "GPL-3.0+"
description = "Support crate for dotnetdll."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
# TODO: update to syn v2
syn = { version = "1", features = ["full"] }
quote = "1"
heck = "0.5"
